--- a/.github/workflows/deploy-infra.yml
+++ b/.github/workflows/deploy-infra.yml
@@ -9,11 +9,12 @@ on:
     types: [submitted]
 
 jobs:
-  Build-Lambda:
+  Test-Lambda:
     name: Build Lambda
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout repo
+        uses: actions/checkout@v2
       - name: Set up Python 3.7
         uses: actions/setup-python@v2
         with:
@@ -21,9 +22,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r src/task_manager_lambda/requirements.txt
-      - name: Test with pytest
+          pip install -r src/requirements.txt
+      - name: Test with Unittest
         run: |
-          pip install -r tests/requirements.txt
-          pytest
+          python -m unittest discover -s src/tests -p 'test_*.py'
       
