--- a/.github/workflows/deploy-infra.yml
+++ b/.github/workflows/deploy-infra.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   Test-Lambda:
-    name: Build Lambda
+    name: Test Lambda
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
@@ -25,5 +25,5 @@ jobs:
           pip install -r src/requirements.txt
       - name: Test with Unittest
         run: |
-          python -m unittest discover -s src/tests -p 'test_*.py'
+          python -m unittest discover src/tests
       
