Inclusão da etapa de montar o zip da lambda

--- a/.github/workflows/deploy-infra.yml
+++ b/.github/workflows/deploy-infra.yml
@@ -26,4 +26,26 @@ jobs:
       - name: Test with Unittest
         run: |
           python -m unittest discover tests
+  Zip-Lambda:
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    name: Zip Lambda
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v2
+      - name: Set up Python 3.7
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
+      - name: Install dependencies
+        run: |
+          mkdir packages
+          python -m pip install --upgrade pip
+          pip install --target ./packages -r src/requirements.txt
+          cd packages
+          zip -r ../packages.zip .
+      - name: Zip Lambda
+        run: |
+          cd ../src
+          zip ../packages.zip lambda_function.py
       
