Ajustes na pipeline

--- a/.github/workflows/deploy-infra.yml
+++ b/.github/workflows/deploy-infra.yml
@@ -42,6 +42,8 @@ jobs:
           mkdir packages
           python -m pip install --upgrade pip
           pip install --target ./packages -r src/requirements.txt
+      - name: Zip dependencies
+        run: |
           cd packages
           zip -r ../packages.zip .
       - name: Zip Lambda
