--- a/.github/workflows/lambda-deploy.yml
+++ b/.github/workflows/lambda-deploy.yml
@@ -1,4 +1,4 @@
-name: Package Lambda
+name: Lambda Deploy
 
 on:
   push:
@@ -59,9 +59,48 @@ jobs:
         run: |
           cd src
           zip ../lambda_deployment.zip task_manager_lambda.py
-          
+
       - name: Upload Zip
         uses: actions/upload-artifact@v3
         with:
           name: lambda_deployment
           path: lambda_deployment.zip
+
+  Deploy-Lambda:
+    needs: Zip-Lambda
+    name: Deploy Lambda
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v4.1.0
+
+      - name: Download Lambda Package
+        uses: actions/download-artifact@v3
+        with:
+          name: lambda_deployment
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: sa-east-1
+
+      - name: HashiCorp - Setup Terraform
+        uses: hashicorp/setup-terraform@v2.0.3
+
+      - name: Terraform Init
+        run: terraform init
+
+      - name: Terraform Format
+        run: terraform fmt -check
+
+      - name: Terraform Plan
+        run: terraform plan -input=false
+
+      - name: Terraform Apply
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        run: terraform apply -auto-approve -input=false
