--- a/.github/workflows/lambda-deploy.yml
+++ b/.github/workflows/lambda-deploy.yml
@@ -93,14 +93,18 @@ jobs:
         uses: hashicorp/setup-terraform@v2.0.3
 
       - name: Terraform Init
+        working-directory: ./terraform
         run: terraform init
 
       - name: Terraform Format
+        working-directory: ./terraform
         run: terraform fmt -check
 
       - name: Terraform Plan
+        working-directory: ./terraform
         run: terraform plan -input=false
 
       - name: Terraform Apply
+        working-directory: ./terraform
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: terraform apply -auto-approve -input=false
